[gd_scene format=3 uid="uid://c8qj7s6d5f4g3"]

[ext_resource type="Script" uid="uid://bvj7vw8p5e80q" path="res://scripts/main_menu.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://bk5pp5f5rfd0s" path="res://Alice-Regular.ttf" id="2_alice"]
[ext_resource type="Texture2D" uid="uid://cdgenthxkatkk" path="res://scenes/download-Photoroom.png" id="3_star"]

[node name="MainMenu" type="Control" unique_id=924786032]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="." unique_id=289628284]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StarIcon" type="TextureRect" parent="." unique_id=246665751]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -250.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_star")
expand_mode = 1
stretch_mode = 5

[node name="Title" type="Label" parent="." unique_id=387157743]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_alice")
theme_override_font_sizes/font_size = 96
text = "[ touch ]"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="." unique_id=1576358007]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_alice")
theme_override_font_sizes/font_size = 48
text = "[ start ]"
flat = true

[node name="SettingsButton" type="Button" parent="." unique_id=342383037]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 200.0
offset_right = 150.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_alice")
theme_override_font_sizes/font_size = 48
text = "[ settings ]"
flat = true
